--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "postcss-theme-customization",
   "version": "0.1.0",
   "description": "PostCSS plugin for theme customization",
-  "keywords": ["postcss", "css", "postcss-plugin", "postcss-theme-customization"],
+  "keywords": [
+    "postcss",
+    "css",
+    "postcss-plugin",
+    "postcss-theme-customization"
+  ],
   "scripts": {
     "test": "node index.test.js"
   },
@@ -13,14 +18,12 @@
     "node": ">=12.0.0"
   },
   "peerDependencies": {
-    "postcss": "^8.3.0"
+    "postcss": "^7.0.39"
   },
   "devDependencies": {
     "clean-publish": "^3.4.2",
     "eslint": "^8.0.1",
-    "eslint-plugin-jest": "^25.2.2",
-    "jest": "^27.3.1",
-    "postcss": "^8.3.11"
+    "postcss": "^7.0.39"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -30,16 +33,12 @@
       "node": true,
       "es6": true
     },
-    "extends": ["eslint:recommended", "plugin:jest/recommended"],
+    "extends": [
+      "eslint:recommended",
+      "plugin:jest/recommended"
+    ],
     "rules": {
       "jest/expect-expect": "off"
-    }
-  },
-  "jest": {
-    "coverageThreshold": {
-      "global": {
-        "statements": 100
-      }
     }
   }
 }
