--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "initialChangelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
-    "postversion": "git push && git push remote --tags"
+    "postversion": "git push && git push origin --tags"
   },
   "author": "qiuzhengqiang",
   "license": "MIT",
